// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marginInlineEnd renders 0 1`] = `
Array [
  .c0 {
  margin-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineEnd renders function 1`] = `
Array [
  .c0 {
  margin-inline-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: has;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineEnd renders invalid theme path 1`] = `
Array [
  .c0 {
  margin-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineEnd renders negative number 1`] = `
Array [
  .c0 {
  margin-inline-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineEnd renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    margin-inline-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    margin-inline-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline-end: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline-end: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineEnd renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    margin-inline-end: July;
  }
}

@media April {
  .c0 {
    margin-inline-end: August;
  }
}

@media January {
  .c0 {
    margin-inline-end: September;
  }
}

@media April {
  .c0 {
    margin-inline-end: November;
  }
}

@media June {
  .c0 {
    margin-inline-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    margin-inline-end: July;
  }
}

@media April {
  .c0 {
    margin-inline-end: August;
  }
}

@media January {
  .c0 {
    margin-inline-end: September;
  }
}

@media April {
  .c0 {
    margin-inline-end: November;
  }
}

@media June {
  .c0 {
    margin-inline-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-inline-end: January;
  }
}

@media April {
  .c0 {
    margin-inline-end: December;
  }
}

@media January {
  .c0 {
    margin-inline-end: April;
  }
}

@media April {
  .c0 {
    margin-inline-end: May;
  }
}

@media June {
  .c0 {
    margin-inline-end: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-inline-end: January;
  }
}

@media April {
  .c0 {
    margin-inline-end: December;
  }
}

@media January {
  .c0 {
    margin-inline-end: April;
  }
}

@media April {
  .c0 {
    margin-inline-end: May;
  }
}

@media June {
  .c0 {
    margin-inline-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineEnd renders postitive number 1`] = `
Array [
  .c0 {
  margin-inline-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineEnd renders string 1`] = `
Array [
  .c0 {
  margin-inline-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: June;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineEnd renders valid theme path 1`] = `
Array [
  .c0 {
  margin-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
